Revision history for {{$dist->name}}

{{$NEXT}}

1.02      2018-11-18 11:37:05 -0500
  - Merged Dist-Zilla-Plugin-FFI-CheckLib into this dist.
    (see Changes.Dist-Zilla-Plugin-FFI-CheckLib for changes
    for that module)

0.01      2018-08-09 05:34:49 -0400
  - initial version